apps/subsystems/downloaders/autobrr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: autobrr
  annotations:
    secret.reloader.stakater.com/reload: ${db_name:=downloaders-db}-${db_suffix_current:=default}-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: autobrr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: autobrr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: autobrr
        image: ghcr.io/autobrr/autobrr:v1.88.0@sha256:e200008d43fe6cd2d944c9bcf20900cfb8ba8a8e509625bb78ee51910b994005
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/healthz/liveness
            port: 7474
        ports:
        - name: autobrr
          containerPort: 7474
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/healthz/liveness
            port: 7474
        resources:
          requests:
            cpu: 15m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /config
          name: autobrr-data
        - mountPath: /tmp
          name: autobrr-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: autobrr-data
        persistentVolumeClaim:
          claimName: autobrr-data
      - name: autobrr-temp
        emptyDir: {}
