apps/subsystems/downloaders/autobrr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: autobrr
spec:
  selector:
    app.kubernetes.io/name: autobrr
  ports:
  - name: autobrr
    port: 7474
    targetPort: autobrr
    protocol: TCP
  type: ClusterIP
